  Changed it to test a valid xml log file as produced by Ant versions later than 1.4.x

cruisecontrol.sh:
----------------------
* handle path conversion under cygwin. Patch by John Woodward

errors.xsl:
----------------------
* Added errors.xsl to replace compile.xsl. Similar logic, but shows errors and warnings from all tasks.

JabberPublisher:
----------------------
* Add 1 second sleep so multiple jabber publishers work. (CC-119) Patch by Fleur Kelpin

JDOM support:
----------------------
* Upgraded from version b9 to version 1.0

Log(Test):
----------------------
* Small patch (CC-121) for new JDOM version by Mark Doliner

manifest.mf:
----------------------
* Corrected Class-Path to refer to the correct jars (includes CC-99)

modifications.xsl:
----------------------
* Fixed matching wrong template for p4 modifications. Patch by Anil Arora

ModificationSet:
----------------------
* Fix for possible NPE when using ignoreFiles

navigation.jsp:
----------------------
* New combo box for project selection (including link to status page). Contribution by Gerd Zanker

reporting application:
----------------------
* Moved JSP's, WEB-INF and static content to dedicated subdirectory (CC-95)

Project:
----------------------
* Catch Throwable during publishing, so errors don't propagate to build()

XSLTag:
----------------------
* now extends CruiseControlTagSupport instead of CruiseControlBodyTagSupport (CC-109). Patch by Mark Doliner

CruiseControl Release Notes - 2.2

Ant:
----------------------
* Upgraded internal Ant to 1.6.2. 
  All ant jars are packaged, to remain backwards compatible with config files that don't use the antscript attribute.

AntBuilder & MavenBuilder:
----------------------
* When using Windows, "cmd.exe /C" is no longer prepended to the command line to avoid problems with spaces.
  This means you'll have to use 'ant.bat' or 'maven.bat' instead of just 'ant' or 'maven'!
* getCommandLineArgs now uses Commandline-class

AntBuilder: