@@ -18,6 +18,10 @@ errors.xsl:
 ----------------------
 * Added errors.xsl to replace compile.xsl. Similar logic, but shows errors and warnings from all tasks.
 
+HTMLEmailPublisher:
+----------------------
+* add xslFileList attribute as a mechanism to customize the list of .xsl files used. Patch by Peter Buckner
+
 JabberPublisher:
 ----------------------
 * Add 1 second sleep so multiple jabber publishers work. (CC-119) Patch by Fleur Kelpin
